# postech-data-analytics

./: .gitignore  README.md
data-chalange/: 2DTAT_CHALLENGE2_FABRICIO_ZILLIG.ipynb
f1-data-analysis/m1-analise-exploratoria/: producao_hospitalar.ipynb
f1-data-analysis/m2-visualizacao-dados/: producao_hospitalar_v2.ipynb
f1-data-analysis/m3-estatistica-algelin/: Algebra_Linear.ipynb  Estatistica.ipynb
f2-machine-learning/m1-machine-learning-python/: notebook-aula1.ipynb  notebook-aula2.ipynb  notebook-aula3.ipynb  notebook-aula4.ipynb  notebook-aula5.ipynb
f2-machine-learning/m2-machine-learning-avancado/: notebook-aula1.ipynb  notebook-aula2.ipynb  notebook-aula3.ipynb  notebook-aula4.ipynb  notebook-aula5.ipynb
f2-machine-learning/m3-time-series/: notebook-aula1.ipynb  notebook-aula2.ipynb  notebook-aula3.ipynb  notebook-aula4.ipynb  notebook-aula5.ipynb
f3-big-data/m1-framework/: notebook-aula1.ipynb  notebook-aula2.ipynb  notebook-aula3.ipynb  notebook-aula4.ipynb  notebook-aula5.ipynb  notebook-aula6.ipynb
f3-big-data/m2-banco-dados/: query-aula2.sql  query-aula3.sql  query-aula6.sql
f5-deep-learning/: pyproject.toml
f5-deep-learning/m1-deep-reinforcement-learning/: notebook-aula1.ipynb  notebook-aula2-aula3.ipynb  notebook-aula2.ipynb  notebook-aula4.ipynb  notebook-aula5.ipynb  notebook-classifier_animals.ipynb
f5-deep-learning/m2-dados-gerados-humanos/: notebook-aula2.ipynb  notebook-aula3.ipynb
f5-deep-learning/projeto-dog-cat-otter/: Makefile  README.md
f5-deep-learning/projeto-dog-cat-otter/app/: main.py
f5-deep-learning/projeto-dog-cat-otter/docker/: compose-dev.yaml  compose-prod.yaml  streamlit-image
f5-deep-learning/projeto-dog-cat-otter/notebook/: train-model.ipynb
lives/: live-121223.ipynb  live01-290823.ipynb  live03-260923.ipynb
lives/live04-101023/: Dockerfile  app.py  docker-compose.yaml  requirements.txt
tech-challenge/f3-covid/: Makefile  README.md  pyproject.toml
tech-challenge/f3-covid/app/: index.html  package-lock.json  package.json  vite.config.ts
tech-challenge/f3-covid/app/src/: App.tsx  Router.tsx  index.css
tech-challenge/f3-covid/app/src/assets/: g_bar_diagnostico.json  g_bar_domicilio.json  g_bar_escola.json  g_bar_etnico.json  g_bar_restricao.json  g_bar_sintoma.json  g_bar_trabalho.json  g_cruza_rede_teste.json  g_cruza_teste_diagnostico.json  g_cruza_teste_restricao.json  g_cruza_teste_sintoma.json  g_pie_rede.json  g_pie_sexo.json  g_pie_teste.json
tech-challenge/f3-covid/app/src/components/: Header.tsx  LinkMenu.tsx
tech-challenge/f3-covid/app/src/layouts/: DefaultLayout.tsx
tech-challenge/f3-covid/app/src/pages/: Cluster.tsx  Contexto.tsx  Processo.tsx  Relatorio.tsx
tech-challenge/f3-covid/docker/: compose.yaml  node-image
tech-challenge/f3-covid/notebook/: clusterizacao.ipynb  preparacao_dados.ipynb
tech-challenge/f3-covid/src/: __init__.py
tech-challenge/f4-brent-oil/: .gitignore  Makefile  README.md  pyproject.toml
tech-challenge/f4-brent-oil/app/: main.py  streamlit.py  update.py
tech-challenge/f4-brent-oil/app/backend/: data_getter.py  prediction.py
tech-challenge/f4-brent-oil/app/backend/model/: models-f4.joblib
tech-challenge/f4-brent-oil/app/frontend/: blocks.py  controller.py  main.py
tech-challenge/f4-brent-oil/app/services/: db.py
tech-challenge/f4-brent-oil/docker/: compose-dev.yaml  compose-prod.yaml  python-image
tech-challenge/f4-brent-oil/notebook/: get_data.ipynb  model.ipynb
tech-challenge/f5-passos-magicos/: .gitignore  README.md  pyproject.toml
tech-challenge/f5-passos-magicos/app/: streamlit.py
tech-challenge/f5-passos-magicos/app/backend/: data_process.py  predict.py
tech-challenge/f5-passos-magicos/app/backend/model/: model.pkl
tech-challenge/f5-passos-magicos/app/frontend/: blocks.py  controller.py  main.py
tech-challenge/f5-passos-magicos/docker/: compose-dev.yaml  compose-prod.yaml
tech-challenge/f5-passos-magicos/notebooks/: nb-faltas.ipynb
(+31 files in other folders)
