[tool.poetry]
name = "f3-covid"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.6"
plotly = "^5.18.0"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
nbformat = "^5.9.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
