[tool.poetry]
name = "f3-covid"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.6"
plotly = "^5.18.0"
pandas = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.2"
nbformat = "^5.9.2"
yellowbrick = "^1.5"
setuptools = "^69.1.1"
scikit-learn = "^1.4.1.post1"
pyarrow = "^15.0.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
