[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.38"
matplotlib = "^3.8.4"
polars = "^0.20.23"
pandas = "^2.2.2"
plotly = "^5.22.0"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
pmdarima = "^2.0.4"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
streamlit = "^1.34.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
