[tool.poetry]
name = "Tech Challenge - Passos Mágicos"
version = "0.1.0"
description = ""
authors = ["Fabricio Zillig <fabricio.zillig@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.4.1"
matplotlib = "^3.9.1.post1"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
plotly = "^5.23.0"
imblearn = "^0.0"
spacy = "^3.7.5"
numpy = "1.26.4"
streamlit = "1.37.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
